--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 
   <body>
     <header>
-      <div class="switch">
+      <img src="./img/myLogo.png" alt="myLogo" />
+
+      <nav class="navbar">
+        <ul class="navbar-u">
+          <li><a href="#">About</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#footer">Contact</a></li>
+        </ul>
+      </nav>
+
+      <div class="switch container__item--right">
         <div class="flicker"></div>
         <div class="moon"></div>
       </div>
@@ -20,20 +30,16 @@
       <div class="main-text">
         <div class="wrapper">
           <div class="typing-demo">
-            Hello World I'm Alejandro Dh...
+            Hello World...
             <!-- hello welcome to my site, I am a front end developer
             passionate about technology and programming enthusiast, I am
             currently learning node js.... -->
           </div>
         </div>
-        <p>Welcome to my Page!</p>
-        <br />
         <p>
           I am FrontEnd Developer and Project Management. Born in Costa Rica and
           e-learning
         </p>
-        <br />
-        <a href="#footer">contact me</a>
       </div>
 
       <div class="hero-image">
