--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <header>
-      <img src="./img/myLogo.png" alt="myLogo" />
+      <img src="https://imgur.com/a/hHgy607" alt="myLogo" />
 
       <nav class="navbar">
         <ul class="navbar-u">
