--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <header>
-      <img src="https://imgur.com/a/hHgy607" alt="myLogo" />
+      <img src="./css/image/myLogo1.png" alt="myLogo" />
 
       <nav class="navbar">
         <ul class="navbar-u">
@@ -37,8 +37,9 @@
           </div>
         </div>
         <p>
-          I am FrontEnd Developer and Project Management. Born in Costa Rica and
-          e-learning
+          I am a nerdy developer Jr who would say his main hobby is to learn, I
+          love to be updated on modern web technologies, and Project Management.
+          Born in Costa Rica.
         </p>
       </div>
 
